--- a/STRyper/Helpers and shared UI objects/FilterPopover.xib
+++ b/STRyper/Helpers and shared UI objects/FilterPopover.xib
@@ -12,7 +12,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kvm-1M-tEL">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Kvm-1M-tEL">
             <rect key="frame" x="0.0" y="0.0" width="474" height="159"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="faV-ce-Irz">
@@ -109,8 +109,8 @@
                     </buttonCell>
                 </button>
                 <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" tag="7" translatesAutoresizingMaskIntoConstraints="NO" id="Pcx-Tp-Ao2">
-                    <rect key="frame" x="153" y="37" width="168" height="16"/>
-                    <textFieldCell key="cell" lineBreakMode="clipping" title="Please, fill all search fields." id="aGy-1R-GXt">
+                    <rect key="frame" x="176" y="37" width="123" height="16"/>
+                    <textFieldCell key="cell" lineBreakMode="clipping" title="Please, fill all fields." id="aGy-1R-GXt">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" red="0.79177749159999999" green="0.28309270739999998" blue="0.2351639569" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -141,7 +141,7 @@ Gw
                 </button>
                 <button horizontalHuggingPriority="249" verticalHuggingPriority="750" tag="6" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U6w-BN-9sw">
                     <rect key="frame" x="316" y="-2" width="159" height="32"/>
-                    <buttonCell key="cell" type="smallSquare" title="Ok" bezelStyle="smallSquare" image="filter pressed" imagePosition="trailing" alignment="center" state="on" borderStyle="border" inset="2" id="TXg-TX-dn5" userLabel="Add Bins">
+                    <buttonCell key="cell" type="smallSquare" title="OK" bezelStyle="smallSquare" image="filter pressed" imagePosition="trailing" alignment="center" state="on" borderStyle="border" inset="2" id="TXg-TX-dn5" userLabel="Add Bins">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                         <string key="keyEquivalent" base64-UTF8="YES">
