--- a/STRyper/Main window components/SizeStandardTab.xib
+++ b/STRyper/Main window components/SizeStandardTab.xib
@@ -22,30 +22,30 @@
                     <rect key="frame" x="0.0" y="0.0" width="383" height="638"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <button toolTip="Remove Selected Size Standard" verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="mTV-4Q-35K" userLabel="-">
-                            <rect key="frame" x="6" y="8" width="14" height="14"/>
-                            <buttonCell key="cell" type="inline" bezelStyle="inline" image="remove" imagePosition="only" alignment="center" state="on" inset="2" id="cHA-uy-f39">
+                        <button toolTip="Duplicate Selected Size Standard" verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="mTV-4Q-35K">
+                            <rect key="frame" x="6" y="6" width="62" height="18"/>
+                            <buttonCell key="cell" type="inline" title="Duplicate" bezelStyle="inline" image="remove" alignment="center" state="on" borderStyle="border" inset="2" id="cHA-uy-f39">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="smallSystemBold"/>
                             </buttonCell>
                             <connections>
-                                <action selector="remove:" target="-2" id="Lrw-GU-V4p"/>
-                                <binding destination="4TZ-Sm-dWa" name="enabled" keyPath="selection.editable" id="kHc-hC-0Jx"/>
-                            </connections>
-                        </button>
-                        <button toolTip="Duplicate Selected Size Standard" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DIm-MT-tb4">
-                            <rect key="frame" x="28" y="6" width="62" height="18"/>
-                            <buttonCell key="cell" type="inline" title="Duplicate" bezelStyle="inline" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="PcX-7M-Jxi">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="smallSystemBold"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="duplicateStandard:" target="-2" id="fHr-kN-nSu"/>
-                                <binding destination="4TZ-Sm-dWa" name="enabled" keyPath="selection" id="1z3-1B-9MS">
+                                <action selector="duplicateStandard:" target="-2" id="2mN-nV-qMY"/>
+                                <binding destination="4TZ-Sm-dWa" name="enabled" keyPath="selection" id="lA6-KD-iU9">
                                     <dictionary key="options">
                                         <string key="NSValueTransformerName">NSIsNotNil</string>
                                     </dictionary>
                                 </binding>
+                            </connections>
+                        </button>
+                        <button toolTip="Delete Size Standard" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DIm-MT-tb4" userLabel="Delete">
+                            <rect key="frame" x="76" y="8" width="15" height="15"/>
+                            <buttonCell key="cell" type="inline" title="Duplicate" bezelStyle="inline" image="trash" imagePosition="only" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="PcX-7M-Jxi">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="smallSystemBold"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="remove:" target="-2" id="Gd5-Bq-ncS"/>
+                                <binding destination="4TZ-Sm-dWa" name="enabled" keyPath="selection.editable" id="V1W-oW-jMf"/>
                             </connections>
                         </button>
                         <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="5VA-Nk-oeh">
@@ -212,8 +212,8 @@
                                     </tableView>
                                 </subviews>
                             </clipView>
-                            <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="dYD-31-6RE">
-                                <rect key="frame" x="0.0" y="287" width="264" height="16"/>
+                            <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="dYD-31-6RE">
+                                <rect key="frame" x="0.0" y="592" width="354" height="16"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
                             <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="I1v-cg-iOH">
@@ -294,5 +294,6 @@
         <image name="add" width="14" height="14"/>
         <image name="padlock" width="14" height="14"/>
         <image name="remove" width="14" height="14"/>
+        <image name="trash" width="15" height="15"/>
     </resources>
 </document>
